--- a/jupyter-notebook-docker/Dockerfile
+++ b/jupyter-notebook-docker/Dockerfile
@@ -1,7 +1,18 @@
 FROM jupyter/base-notebook
 
-COPY requirements.txt ./requirements.txt
+
 
 RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+RUN pip --no-cache-dir install poetry
+
+WORKDIR /home/jovyan/work
+
+COPY ./pyproject.toml .
+
+RUN poetry config virtualenvs.create false
+RUN poetry install --no-dev -vvv
+
+
+
+
 
