--- a/jupyter-notebook-docker/pyproject.toml
+++ b/jupyter-notebook-docker/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Jlhervy <jlhervy56@gmail.com>"]
 python = "^3.7"
 mlflow = "^1.6.0"
 pandas = "^1.0.1"
+tensorflow="^2.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
